fixing text wrapping issue on ios

--- a/SCSS/addCourse.scss
+++ b/SCSS/addCourse.scss
@@ -250,12 +250,12 @@
 		.buttonDiscard {
 			grid-area: discard;
 			height: 44px;
-			font-size: 1.3rem;
+			font-size: 1.1rem;
 		}
 		.buttonAdd {
 			grid-area: add;
 			height: 44px;
-			font-size: 1.5rem;
+			font-size: 1.3rem;
 		}
 	}
 }
